--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,9 +57,5 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:2.2.2"
     implementation "androidx.room:room-runtime:2.2.6"
     kapt "androidx.room:room-compiler:2.2.6"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.21"
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'androidx.room:room-rxjava2:2.2.6'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
-
+    implementation "androidx.room:room-ktx:2.2.6"
 }
