--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
     testImplementation('org.jetbrains.kotlin:kotlin-test-junit:1.4.21')
     testImplementation "io.mockk:mockk:1.10.6"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+
 }
