--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,8 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
     testImplementation('org.jetbrains.kotlin:kotlin-test-junit:1.4.21')
     testImplementation "io.mockk:mockk:1.10.6"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
