--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id("de.mannodermaus.android-junit5")
     id("io.gitlab.arturbosch.detekt").version("1.16.0")
 }
 
